--- a/index.html
+++ b/index.html
@@ -23,26 +23,30 @@
         <section>
             <h2>Featured Games</h2>
             <div class="game">
-                <img src="ticimg.jpg" alt="Game 1">
+                <a href="https://adi-exe.github.io/tik-tak-toe/">
+                <img src="ticimg.jpg" alt="Game 1"></a>
                 <h3>Game 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies nisi nec diam facilisis, eget bibendum mauris tincidunt.</p>
                 <a href="#">Learn More</a>
             </div>
             <div class="game">
-                <img src="stoneimg.jpg" alt="Game 2">
+                <a href="https://adi-exe.github.io/Rock-Paper_scissor/">
+                <img src="stoneimg.jpg" alt="Game 2"></a>
                 <h3>Game 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies nisi nec diam facilisis, eget bibendum mauris tincidunt.</p>
                 <a href="#">Learn More</a>
             </div>
 
             <div class="game">
-                <img src="snakeimg.jpg" alt="Game 3">
+                <a href="https://adi-exe.github.io/Snake-Xenzia/">
+                <img src="snakeimg.jpg" alt="Game 3"></a>
                 <h3>Game 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies nisi nec diam facilisis, eget bibendum mauris tincidunt.</p>
                 <a href="#">Learn More</a>
             </div>
             <div class="game">
-                <img src="memoryimg.jpg" alt="Game 4">
+                <a href="https://adi-exe.github.io/Memory-Game/">
+                <img src="memoryimg.jpg" alt="Game 4"></a>
                 <h3>Game 4</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies nisi nec diam facilisis, eget bibendum mauris tincidunt.</p>
                 <a href="#">Learn More</a>
