Updated play now button and UI.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.cdnfonts.com/css/gotham-6" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Store</title>
@@ -9,49 +10,55 @@
 <body>
     <header>
         <h1>Welcome to the Game Store</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Games</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+    
+        </div>
+
     </header>
 
     <main>
-        <section>
-            <h2>Featured Games</h2>
+        
+
             <div class="game">
                 <a href="https://adi-exe.github.io/tik-tak-toe/">
                 <img src="ticimg.jpg" alt="Game 1"></a>
-                <h3>Game 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies nisi nec diam facilisis, eget bibendum mauris tincidunt.</p>
-                <a href="#">Learn More</a>
+                <p><h3>TIC TAC TOE</h3></p>
+                <p>
+                Now you can play Tic Tac Toe on your device for FREE.</p>
+                <div class="hr"><a href="https://adi-exe.github.io/tik-tak-toe/"> PLAY NOW!</a></div>
             </div>
             <div class="game">
                 <a href="https://adi-exe.github.io/Rock-Paper_scissor/">
                 <img src="stoneimg.jpg" alt="Game 2"></a>
-                <h3>Game 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies nisi nec diam facilisis, eget bibendum mauris tincidunt.</p>
-                <a href="#">Learn More</a>
+                <p><h3>ROCK PAPER SCISSOR</h3></p>
+                <p>Accept the challenge & start the rock, paper scissor epic fight battle challenge!</p>
+                <div class="hr"><a href="https://adi-exe.github.io/Rock-Paper_scissor/"> PLAY NOW!</a></div>
             </div>
 
             <div class="game">
                 <a href="https://adi-exe.github.io/Snake-Xenzia/">
                 <img src="snakeimg.jpg" alt="Game 3"></a>
-                <h3>Game 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies nisi nec diam facilisis, eget bibendum mauris tincidunt.</p>
-                <a href="#">Learn More</a>
+                <p><h3>SNAKE XENZIA</p>
+                </h3>
+                <p>Hit other worms to grow faster, play the fun action hungry snake game.</p>
+                <div class="hr"><a href="https://adi-exe.github.io/Snake-Xenzia/"> PLAY NOW!</a></div>
             </div>
             <div class="game">
                 <a href="https://adi-exe.github.io/Memory-Game/">
                 <img src="memoryimg.jpg" alt="Game 4"></a>
-                <h3>Game 4</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies nisi nec diam facilisis, eget bibendum mauris tincidunt.</p>
-                <a href="#">Learn More</a>
+                <p><h3>MEMORY GAME</h3></p>
+                <p>Train your cognition with games that target memory, reasoning, and more! </p>
+                <div class="hr"><a href="https://adi-exe.github.io/Memory-Game/"> PLAY NOW!</a></div>
             </div>
-        </section>
+
     </main>
 
     <footer>
@@ -59,3 +66,4 @@
     </footer>
 </body>
 </html>
+
